--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,9 +7,15 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Hi, let me rate your food!</div>
+    <div class='title'>NEURONEAT</div>
     <p>
       Use images of <strong>your food</strong> and I will tell you what I think about it.
+    </p>
+    <p>
+      I am a deep convolutional neural network based on the Resnet50 architecture. I was trained on database of food images 
+      taken from Reddit. The subreddits I used to learn how nice food looks like were <strong>r/foodporn</strong>, <strong>r/foodporn</strong>
+      and <strong>r/forbiddensnacks</strong>. This makes me pretty good at recognizing food and whether it is FoodPorn worthy or
+      belongs straight to ShittyFoodPorn.
     </p>
     <div class='content'>
       <div class='no-display'>
