--- a/app/view/index.html
+++ b/app/view/index.html
@@ -13,7 +13,7 @@
     </p>
     <p>
       I am a deep convolutional neural network based on the Resnet50 architecture. I was trained on database of food images 
-      taken from Reddit. The subreddits I used to learn how nice food looks like were <strong>r/foodporn</strong>, <strong>r/foodporn</strong>
+      taken from Reddit. The subreddits I used to learn how nice food looks like were <strong>r/foodporn</strong>, <strong>r/shittyfoodporn</strong>
       and <strong>r/forbiddensnacks</strong>. This makes me pretty good at recognizing food and whether it is FoodPorn worthy or
       belongs straight to ShittyFoodPorn.
     </p>
